現状問題ないので一旦コミット

--- a/next/src/styles/reset.scss
+++ b/next/src/styles/reset.scss
@@ -6,9 +6,9 @@
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
-    border-style: solid;
-    border-width: 0;
+  box-sizing: border-box;
+  border-style: solid;
+  border-width: 0;
 }
 
 /* Document */
@@ -21,14 +21,16 @@
  */
 
 html {
-    font-size: 16px;
-    line-height: 1.15;
-    color: #333;
-    /* 1 */
-    -webkit-text-size-adjust: 100%;
-    /* 2 */
-    -webkit-tap-highlight-color: transparent;
-    /* 3*/
+  font-size: 16px;
+  line-height: 1.15;
+  color: #333;
+  font-family: "Noto Serif JP", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN",
+    "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro";
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-tap-highlight-color: transparent;
+  /* 3*/
 }
 
 /* Sections */
@@ -39,7 +41,7 @@ html {
  */
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 /**
@@ -47,7 +49,7 @@ body {
  */
 
 main {
-    display: block;
+  display: block;
 }
 
 /* Vertical rhythm */
@@ -62,7 +64,7 @@ iframe,
 form,
 figure,
 dl {
-    margin: 0;
+  margin: 0;
 }
 
 /* Headings */
@@ -74,9 +76,9 @@ h3,
 h4,
 h5,
 h6 {
-    font-size: inherit;
-    font-weight: inherit;
-    margin: 0;
+  font-size: inherit;
+  font-weight: inherit;
+  margin: 0;
 }
 
 /* Lists (enumeration) */
@@ -84,20 +86,20 @@ h6 {
 
 ul,
 ol {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 /* Lists (definition) */
 /* ============================================ */
 
 dt {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 dd {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 /* Grouping content */
@@ -109,16 +111,16 @@ dd {
  */
 
 hr {
-    box-sizing: content-box;
-    /* 1 */
-    height: 0;
-    /* 1 */
-    overflow: visible;
-    /* 2 */
-    border-top-width: 1px;
-    margin: 0;
-    clear: both;
-    color: inherit;
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
+  border-top-width: 1px;
+  margin: 0;
+  clear: both;
+  color: inherit;
 }
 
 /**
@@ -127,14 +129,14 @@ hr {
  */
 
 pre {
-    font-family: monospace, monospace;
-    /* 1 */
-    font-size: inherit;
-    /* 2 */
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: inherit;
+  /* 2 */
 }
 
 address {
-    font-style: inherit;
+  font-style: inherit;
 }
 
 /* Text-level semantics */
@@ -145,9 +147,9 @@ address {
  */
 
 a {
-    background-color: transparent;
-    text-decoration: none;
-    color: inherit;
+  background-color: transparent;
+  text-decoration: none;
+  color: inherit;
 }
 
 /**
@@ -156,8 +158,8 @@ a {
  */
 
 abbr[title] {
-    text-decoration: underline dotted;
-    /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */
 }
 
 /**
@@ -166,7 +168,7 @@ abbr[title] {
 
 b,
 strong {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 
 /**
@@ -177,10 +179,10 @@ strong {
 code,
 kbd,
 samp {
-    font-family: monospace, monospace;
-    /* 1 */
-    font-size: inherit;
-    /* 2 */
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: inherit;
+  /* 2 */
 }
 
 /**
@@ -188,7 +190,7 @@ samp {
  */
 
 small {
-    font-size: 80%;
+  font-size: 80%;
 }
 
 /**
@@ -198,18 +200,18 @@ small {
 
 sub,
 sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sub {
-    bottom: -0.25em;
+  bottom: -0.25em;
 }
 
 sup {
-    top: -0.5em;
+  top: -0.5em;
 }
 
 /* Replaced content */
@@ -224,7 +226,7 @@ img,
 embed,
 object,
 iframe {
-    vertical-align: bottom;
+  vertical-align: bottom;
 }
 
 /* Forms */
@@ -241,19 +243,19 @@ input,
 optgroup,
 select,
 textarea {
-    -webkit-appearance: none;
-    /* 1 */
-    appearance: none;
-    vertical-align: middle;
-    color: inherit;
-    font: inherit;
-    background: transparent;
-    padding: 0;
-    margin: 0;
-    border-radius: 0;
-    text-align: inherit;
-    text-transform: inherit;
-    /* 2 */
+  -webkit-appearance: none;
+  /* 1 */
+  appearance: none;
+  vertical-align: middle;
+  color: inherit;
+  font: inherit;
+  background: transparent;
+  padding: 0;
+  margin: 0;
+  border-radius: 0;
+  text-align: inherit;
+  text-transform: inherit;
+  /* 2 */
 }
 
 /**
@@ -261,13 +263,13 @@ textarea {
  */
 
 [type="checkbox"] {
-    -webkit-appearance: checkbox;
-    appearance: checkbox;
+  -webkit-appearance: checkbox;
+  appearance: checkbox;
 }
 
 [type="radio"] {
-    -webkit-appearance: radio;
-    appearance: radio;
+  -webkit-appearance: radio;
+  appearance: radio;
 }
 
 /**
@@ -278,14 +280,14 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 button:disabled,
 [type="button"]:disabled,
 [type="reset"]:disabled,
 [type="submit"]:disabled {
-    cursor: default;
+  cursor: default;
 }
 
 /**
@@ -293,11 +295,11 @@ button:disabled,
  */
 
 :-moz-focusring {
-    outline: auto;
+  outline: auto;
 }
 
 select:disabled {
-    opacity: inherit;
+  opacity: inherit;
 }
 
 /**
@@ -305,7 +307,7 @@ select:disabled {
  */
 
 option {
-    padding: 0;
+  padding: 0;
 }
 
 /**
@@ -313,13 +315,13 @@ option {
  */
 
 fieldset {
-    margin: 0;
-    padding: 0;
-    min-width: 0;
+  margin: 0;
+  padding: 0;
+  min-width: 0;
 }
 
 legend {
-    padding: 0;
+  padding: 0;
 }
 
 /**
@@ -327,7 +329,7 @@ legend {
  */
 
 progress {
-    vertical-align: baseline;
+  vertical-align: baseline;
 }
 
 /**
@@ -335,7 +337,7 @@ progress {
  */
 
 textarea {
-    overflow: auto;
+  overflow: auto;
 }
 
 /**
@@ -344,7 +346,7 @@ textarea {
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-    height: auto;
+  height: auto;
 }
 
 /**
@@ -352,8 +354,8 @@ textarea {
  */
 
 [type="search"] {
-    outline-offset: -2px;
-    /* 1 */
+  outline-offset: -2px;
+  /* 1 */
 }
 
 /**
@@ -361,7 +363,7 @@ textarea {
  */
 
 [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 /**
@@ -370,10 +372,10 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    /* 1 */
-    font: inherit;
-    /* 2 */
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
 }
 
 /**
@@ -381,7 +383,7 @@ textarea {
  */
 
 label[for] {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Interactive */
@@ -392,7 +394,7 @@ label[for] {
  */
 
 details {
-    display: block;
+  display: block;
 }
 
 /*
@@ -400,7 +402,7 @@ details {
  */
 
 summary {
-    display: list-item;
+  display: list-item;
 }
 
 /*
@@ -408,7 +410,7 @@ summary {
  */
 
 [contenteditable]:focus {
-    outline: auto;
+  outline: auto;
 }
 
 /* Tables */
@@ -419,22 +421,22 @@ summary {
 */
 
 table {
-    border-color: inherit;
-    /* 1 */
-    border-collapse: collapse;
+  border-color: inherit;
+  /* 1 */
+  border-collapse: collapse;
 }
 
 caption {
-    text-align: left;
+  text-align: left;
 }
 
 td,
 th {
-    vertical-align: top;
-    padding: 0;
+  vertical-align: top;
+  padding: 0;
 }
 
 th {
-    text-align: left;
-    font-weight: bold;
+  text-align: left;
+  font-weight: bold;
 }
